# haskell-speaker

./: .gitignore  LICENSE  haskell-speaker.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Speaker.hs
src/Speaker/: Auth.hs  Config.hs  User.hs  UserController.hs  UserRepository.hs  Utils.hs
src/Speaker/Kudos/: Category.hs  Controller.hs  Model.hs  Repository.hs
src/Speaker/User/: Controller.hs  Model.hs  Repository.hs
