name:                haskell-speaker
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-speaker#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Speaker
                     , Speaker.Config
                     , Speaker.User.Model
                     , Speaker.User.Repository
                     , Speaker.User.Controller
                     , Speaker.Kudos.Model
                     , Speaker.Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , lens
                     , bytestring
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , transformers
                     , mtl
                     , resourcet
                     , ini
                     , unordered-containers
                     , text
                     , monad-logger
                     , monad-control
                     , resource-pool
  default-language:    Haskell2010

executable haskell-speaker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-speaker
  default-language:    Haskell2010

test-suite haskell-speaker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-speaker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-speaker
